syntax = "proto3";

package things.test.io;

option go_package = "github.com/solo-io/skv2/codegen/test/api/things.test.io/v1";

import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";
import "encoding/protobuf/cue/cue.proto";

message PaintSpec {
    PaintColor color = 1;

    oneof paintType {
        AcrylicType acrylic = 2;
        OilType oil = 3;
    };

    .google.protobuf.Any my_favorite = 4;

    // OpenAPI gen test for recursive fields
    RecursiveType recursive_type = 5;

    // tests OpenAPI schema gen for Recursive types
    message RecursiveType {
        RecursiveType recursive_field = 1 [(solo.io.cue.opt).disable_openapi_validation = true];
        repeated RecursiveType repeated_recursive_field = 2 [(solo.io.cue.opt).disable_openapi_validation = true];

        // Ensure that FieldOptions can be defined using package name resolution that starts from the
        // outermost scope: https://developers.google.com/protocol-buffers/docs/proto3#packages_and_name_resolution
        RecursiveType recursive_field_outermost_scope = 3 [(.solo.io.cue.opt).disable_openapi_validation = true];
    }
}

message PaintColor {
    string hue = 1;
    float value = 2;
}

message AcrylicType {
    enum Body {
        Light = 0;
        Medium = 1;
        Heavy = 2;
    }
    Body body = 3;
}

message OilType {
    bool waterMixable = 1;

    oneof pigmentType {
        string powder = 2;
        string fluid = 3;
    };
}

message PaintStatus {
    int64 observedGeneration = 1;
    int64 percentRemaining = 2;
    map<string, Location> nearbyPaints = 3;

    message Location {
        string x = 1 [(solo.io.cue.opt).disable_openapi_validation = true];
        string y = 2 [(solo.io.cue.opt).disable_openapi_validation = true];
    }
}

message ClusterResourceSpec {
    google.protobuf.StringValue imported = 1;
}
